# apex

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  README.md  api.py  docker-compose.yml  pyproject.toml
.claude/: launch.json  start-dashboard.js
.claude/agents/: data-model-explorer.md
.claude/skills/data-analyst/: SKILL.md
.claude/skills/data-triage/: SKILL.md
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/data_engine/: __init__.py  engine.py  router.py
backend/data_engine/feeds/: __init__.py  binance_ws.py
backend/data_engine/indicators/: __init__.py
backend/intelligence/: __init__.py  engine.py  router.py
backend/intelligence/agents/: __init__.py
backend/risk_execution/: __init__.py  engine.py  router.py
backend/shared/: database.py  models.py  questdb.py
backend/strategy/: __init__.py  engine.py  router.py
backend/strategy/crypto/: __init__.py
backend/strategy/equities/: __init__.py
dashboard/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Header.tsx  (+6 more)
data-engine/: __init__.py  requirements.txt
data-engine/feeds/: __init__.py
docker/postgres/: init.sql
intelligence/: __init__.py
intelligence/models/: __init__.py
risk-execution/: __init__.py  requirements.txt
risk-execution/execution/: __init__.py
risk-execution/risk/: __init__.py
shared/: __init__.py  config.py  events.py  nats_client.py  questdb.py  redis_client.py
strategy/: __init__.py
strategy/options/: __init__.py
(+5 files in other folders)
